@@ -1,0 +1,6 @@
+#include "readlinehistory.ih"
+
+void ReadLineHistory::insert(std::ostream &out, bool useTimestamps)
+{
+    
+}
