@@ -1,3 +1,12 @@
+bobcat (2.19.01)
+
+  * Repaired bug in BigInt::isqrt
+
+  * BigInt's destructor called BN_clear, but should have called BN_free.
+    Now repaired.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 10 Oct 2011 10:29:08 +0200
+
 bobcat (2.19.00)
 
   * The 'BigInt' man-page was adapted to match the actual member and function
